RESOLVED FIXED 246708
[JSC][armv7] Disassembler should use register numbers instead of (inappropriate) names
https://bugs.webkit.org/show_bug.cgi?id=246708
Summary [JSC][armv7] Disassembler should use register numbers instead of (inappropria...
Joseph Griego
Reported 2022-10-18 13:34:04 PDT
As title. The current disassembler uses e.g. "fp" for r11 and "ip" for r12 (this is the "InterProcedural link" register for calls across dsos); neither of which has the corresponding meaning inside of the JIT; (or in Thumb code generally, which uses r7 as the frame pointer) This is a minor annoyance, but it would be nice to just use the register numbers instead. Patch forthcoming
Attachments
Joseph Griego
Comment 1 2022-10-18 13:36:46 PDT
Radar WebKit Bug Importer
Comment 2 2022-10-25 13:35:19 PDT
EWS
Comment 3 2022-10-28 13:21:56 PDT
Committed 256113@main (51613ad86d58): <https://commits.webkit.org/256113@main> Reviewed commits have been landed. Closing PR #5510 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.