[JSC][armv7] Use register numbers, not names, in disassembly https://bugs.webkit.org/show_bug.cgi?id=246708

Reviewed by Yusuke Suzuki.

As title. Capstone by default will use the conventional names for some registers
under the usual ARM abi: e.g. r12 is the "InterProcedural link" register, `ip`,
and r11 is `fp` for ARM code...

Neither of these makes any sense inside of the JIT, which uses r12 as a GPR and
r7 as the frame pointer (like other thumb code does.) To alleviate confusion, I
suggest we ask capstone to just use register numbers for these. Note that `pc`
and `sp` are always named in the ISA, they don't have numbers at all, so they'll
still disassemble as `pc` and `sp`.

* Source/JavaScriptCore/disassembler/CapstoneDisassembler.cpp:
(JSC::tryToDisassemble):

Canonical link: https://commits.webkit.org/256113@main